Fix mobile code overflow

--- a/src/templates/postPage.module.scss
+++ b/src/templates/postPage.module.scss
@@ -14,6 +14,7 @@
     background-color: $white;
     color: $black;
     padding: 0.7rem 1rem;
+    overflow: scroll;
   }
 
   margin-bottom: 5rem;
